tests/fixtures/invalid/pow_dict_none_dict.py
# Cannot call pow() with Dict[str, int], None, Dict[str, int]
x = pow({"a": 1}, None, {"a": 1})
